Remove construction notice

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Ilia Moiseev
 email: ilia.moiseev.5@yandex.ru
 description: >- # this means to ignore newlines until "baseurl:"
-  Personal website and blog - currently under construction
+  Personal website and blog
 github_username:  oxid15
 linkedin_username:  ilia-moiseev
 
