Add google analytics key

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,8 @@ author: Ilia Moiseev
 github_username:  oxid15
 linkedin_username:  ilia-moiseev
 
+google_analytics: G-RZ3GX2B0TX
+
 social:
   name: Ilia Moiseev
   links:
